add more backends and postprocessors

--- a/projects.json
+++ b/projects.json
@@ -8,7 +8,7 @@
             },
             "xGPU_30s": {
                 "Postprocessor": [
-                    "cp_uvh5_p001"
+                    "cp_uvh5"
                 ]
             }
         }
@@ -56,6 +56,24 @@
             "BLADE_A_64us_noincoh": {
                 "Postprocessor": [
                     "cp_fil_p031"
+                ]
+            }
+        }
+    },
+    "p041": {
+        "Backend": {
+            "xGPU_1s": {
+                "Postprocessor": [
+                    "cp_uvh5_p041"
+                ]
+            }
+        }
+    },
+    "p059": {
+        "Backend": {
+            "BLADE_H_2b_32c_32a": {
+                "Postprocessor": [
+                    "cp_blade_p059"
                 ]
             }
         }
